# cold-clear

./: .gitignore  Cargo.toml
battle/src/: battle.rs  controller.rs  game.rs  lib.rs
bot/src/: desktop.rs  lib.rs  moves.rs
bot/src/evaluation/: mod.rs  standard.rs
bot/src/modes/: mod.rs  normal.rs
c-api/: coldclear.h
c-api/src/: lib.rs
cc-client/: Cargo.toml  test.ccdb
cc-client/src/: lib.rs
compare/src/: main.rs
das-pathfinder-dll/: Cargo.toml
das-pathfinder-dll/src/: lib.rs
gui/: Cargo.toml
gui/src/: main.rs  minobot_input.rs  misamino_input.rs  player_draw.rs  realtime.rs  replay.rs
libtetris/src/: board.rs  lock_data.rs  piece.rs
misamino-dll/: Cargo.toml
misamino-dll/src/: das_pf.rs  lib.rs  options-header
opening-book/src/: builder.rs  lib.rs
optimizer/src/: battle.rs
