[package]
name = "das-pathfinder-dll"
version = "0.1.0"
authors = ["KSean222 <44050761+KSean222@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "das_pf"
crate-type = ["cdylib"]

[dependencies]
libtetris = { path = "../libtetris" }